lower limb ixx refine v2

--- a/inertia_test.ipynb
+++ b/inertia_test.ipynb
@@ -1,5 +1,5 @@
 {
- "cells": [
+ "cells": [scaled
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -19,12 +19,249 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import mujoco_py\n",
-    "# Load model from XML\n",
-    "# model = mujoco.MjModel.from_xml_path('khrylib/assets/mujoco_models/mocap_v2_all_scacled_one_leg_fixed_base.xml')\n",
-    "# data = mujoco.MjData(model)\n",
-    "# mujoco.mj_saveLastXML('mocap_v2_all_scacled_one_leg_fixed_base_local.xml', model)\n",
-    "mujoco_py.load_model_from_path('khrylib/assets/mujoco_models/mocap_v2_all_scacled_one_leg_fixed_base_local.xml')\n",
-    "model = mujoco.MjModel.from_xml_path('khrylib/assets/mujoco_models/mocap_v2_all_scacled_one_leg_fixed_base_local.xml')\n"
+    "from inertial_utils import *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modify_xml_local_coordinate(\"khrylib/assets/mujoco_models/mocap_v2.xml\",\n",
+    "           \"khrylib/assets/mujoco_models/mocap_v2_local.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mujoco_py.cymj.PyMjModel at 0x35e7d850>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if the model is loaded correctly\n",
+    "mujoco_py.load_model_from_path('khrylib/assets/mujoco_models/mocap_v2_all_scacled_one_leg_fixed_base_local.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  a dummy  winter_params file \n",
+    "\n",
+    "winter_params = {\n",
+    "    'root':{\n",
+    "        'com': [0, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'thorax': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'lfemur': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'ltibia': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'lfoot': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'rfemur': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'rtibia': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'rfoot': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'lhumerus': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'lradius': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'lwrist': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'rhumerus': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'rradius': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'rwrist': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'lowerneck':{\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    },\n",
+    "    'head': {\n",
+    "        'com': [0.1, 0, 0],\n",
+    "        'mass': 1.0,\n",
+    "        'I': [0.1, 0.1, 0.1]\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COM in body frame: [0.3 0.3 0.4]\n",
+      "Diagonal inertia in body frame: [0.11 0.11 0.1 ]\n",
+      "Inertial orientation in body frame (quat): [0.0, 0.0, 1.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def transform_inertial_geom_to_body(\n",
+    "    mass, com_geom, diaginertia_geom, quat_geom, pos_geom, quat_body, pos_body\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Transform inertial properties from geom frame to body frame.\n",
+    "    Args:\n",
+    "        mass: float\n",
+    "        com_geom: (3,) array, center of mass in geom frame\n",
+    "        diaginertia_geom: (3,) array, diagonal inertia in geom frame\n",
+    "        quat_geom: (4,) array, [w, x, y, z] quaternion of geom frame in parent (body) frame\n",
+    "        pos_geom: (3,) array, position of geom frame in body frame\n",
+    "        quat_body: (4,) array, [w, x, y, z] quaternion of body frame in parent frame (usually identity)\n",
+    "        pos_body: (3,) array, position of body frame in parent frame (usually zero)\n",
+    "    Returns:\n",
+    "        com_body: (3,) array, center of mass in body frame\n",
+    "        diaginertia_body: (3,) array, diagonal inertia in body frame\n",
+    "        quat_body_inertial: (4,) array, orientation of principal axes in body frame\n",
+    "    \"\"\"\n",
+    "    # Rotation from geom to body\n",
+    "    R_geom = Rotation.from_quat([quat_geom[1], quat_geom[2], quat_geom[3], quat_geom[0]]).as_matrix()\n",
+    "    # Inertia tensor in geom frame\n",
+    "    I_geom = np.diag(diaginertia_geom)\n",
+    "    # Rotate inertia tensor to body frame\n",
+    "    I_body = R_geom @ I_geom @ R_geom.T\n",
+    "    # Center of mass in body frame\n",
+    "    com_body = R_geom @ com_geom + pos_geom\n",
+    "    # Parallel axis theorem (if com_geom is not at origin)\n",
+    "    d = com_body - pos_geom  # vector from geom origin to COM in body frame\n",
+    "    I_body += mass * (np.dot(d, d) * np.eye(3) - np.outer(d, d))\n",
+    "    # Get principal axes and diagonalize\n",
+    "    eigvals, eigvecs = np.linalg.eigh(I_body)\n",
+    "    # Sort by descending eigenvalue\n",
+    "    idx = np.argsort(eigvals)[::-1]\n",
+    "    eigvals = eigvals[idx]\n",
+    "    eigvecs = eigvecs[:, idx]\n",
+    "    # Quaternion for principal axes\n",
+    "    R_principal = eigvecs\n",
+    "    quat_body_inertial = Rotation.from_matrix(R_principal).as_quat()  # [x, y, z, w]\n",
+    "    # Convert to MuJoCo [w, x, y, z]\n",
+    "    quat_body_inertial = [quat_body_inertial[3], quat_body_inertial[0], quat_body_inertial[1], quat_body_inertial[2]]\n",
+    "    return com_body, eigvals, quat_body_inertial\n",
+    "\n",
+    "# Example usage:\n",
+    "mass = 1.0\n",
+    "com_geom = np.array([0.1, 0, 0])  # center of mass in geom frame\n",
+    "diaginertia_geom = np.array([0.1, 0.1, 0.1])\n",
+    "quat_geom = [1, 0, 0, 0]  # identity quaternion [w, x, y, z]\n",
+    "pos_geom = np.array([0.2, 0.3, 0.4])  # geom position in body frame\n",
+    "quat_body = [1, 0, 0, 0]  # usually identity\n",
+    "pos_body = np.array([0, 0, 0])\n",
+    "\n",
+    "com_body, diaginertia_body, quat_body_inertial = transform_inertial_geom_to_body(\n",
+    "    mass, com_geom, diaginertia_geom, quat_geom, pos_geom, quat_body, pos_body\n",
+    ")\n",
+    "print(\"COM in body frame:\", com_body)\n",
+    "print(\"Diagonal inertia in body frame:\", diaginertia_body)\n",
+    "print(\"Inertial orientation in body frame (quat):\", quat_body_inertial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing body: root\n",
+      "Processing body: lhipjoint\n",
+      "Processing body: lfemur\n",
+      "Processing body: ltibia\n",
+      "Processing body: lfoot\n",
+      "Processing body: rhipjoint\n",
+      "Processing body: rfemur\n",
+      "Processing body: rtibia\n",
+      "Processing body: rfoot\n",
+      "Processing body: lowerback\n",
+      "Processing body: upperback\n",
+      "Processing body: thorax\n",
+      "Processing body: lowerneck\n",
+      "Processing body: upperneck\n",
+      "Processing body: head\n",
+      "Processing body: lclavicle\n",
+      "Processing body: lhumerus\n",
+      "Processing body: lradius\n",
+      "Processing body: lwrist\n",
+      "Processing body: rclavicle\n",
+      "Processing body: rhumerus\n",
+      "Processing body: rradius\n",
+      "Processing body: rwrist\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "update_inertial_params('khrylib/assets/mujoco_models/mocap_v2_local.xml',\n",
+    "                        'khrylib/assets/mujoco_models/mocap_v2_local_new.xml',  winter_params)"
    ]
   },
   {
@@ -36,13 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Dictionary of gt human inertia values (approximate)\n",
-    "# Source: Winter DA (2009) Biomechanics and Motor Control of Human Movement\n",
     "gt_inertia = {\n",
     "    'head':        [0.025, 0.025, 0.017],   \n",
     "    'thorax':      [0.350, 0.250, 0.300],\n",
@@ -54,22 +289,6 @@
     "    'shank':       [0.050, 0.050, 0.020],\n",
     "    'foot':        [0.008, 0.008, 0.001]\n",
     "}\n",
-    "\n",
-    "# Collect MuJoCo-computed inertia values\n",
-    "results = []\n",
-    "for body_id in range(model.nbody):\n",
-    "    body_name = mujoco.mj_id2name(model, mujoco.mjtObj.mjOBJ_BODY, body_id)\n",
-    "    inertia = model.body_inertia[body_id]\n",
-    "    \n",
-    "    results.append({\n",
-    "        'Body': body_name,\n",
-    "        'I_xx': inertia[0],\n",
-    "        'I_yy': inertia[1],\n",
-    "        'I_zz': inertia[2]\n",
-    "    })\n",
-    "\n",
-    "# Create DataFrame and compare with gt values\n",
-    "df = pd.DataFrame(results)\n",
     "\n",
     "# Add gt values based on body mapping\n",
     "body_mapping = {\n",
@@ -89,11 +308,51 @@
     "    'rfemur': 'thigh',\n",
     "    'rtibia': 'shank',\n",
     "    'rfoot': 'foot'\n",
-    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Collect MuJoCo-computed inertia values\u001b[39;00m\n\u001b[1;32m      2\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m body_id \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mnbody):\n\u001b[1;32m      4\u001b[0m     body_name \u001b[38;5;241m=\u001b[39m mujoco\u001b[38;5;241m.\u001b[39mmj_id2name(model, mujoco\u001b[38;5;241m.\u001b[39mmjtObj\u001b[38;5;241m.\u001b[39mmjOBJ_BODY, body_id)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m body_name  \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mworld\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlhipjoint\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroot\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Collect MuJoCo-computed inertia values\n",
+    "results = []\n",
+    "for body_id in range(model.nbody):\n",
+    "    body_name = mujoco.mj_id2name(model, mujoco.mjtObj.mjOBJ_BODY, body_id)\n",
+    "    if body_name  not in [\"world\", \"lhipjoint\", \"root\"]:\n",
+    "        inertia = model.body_inertia[body_id]\n",
+    "        \n",
+    "        results.append({\n",
+    "            'Body': body_name,\n",
+    "            'I_xx': inertia[0],\n",
+    "            'I_yy': inertia[1],\n",
+    "            'I_zz': inertia[2]\n",
+    "        })\n",
+    "\n",
+    "# Create DataFrame and compare with gt values\n",
+    "df = pd.DataFrame(results)\n",
     "\n",
     "df['gt I_xx'] = df['Body'].map(lambda x: gt_inertia.get(body_mapping.get(x, ''), [np.nan]*3)[0])\n",
-    "df['gt I_yy'] = df['Body'].map(lambda x: gt_inertia.get(body_mapping.get(x, ''), [np.nan]*3)[1])\n",
-    "df['gt I_zz'] = df['Body'].map(lambda x: gt_inertia.get(body_mapping.get(x, ''), [np.nan]*3)[2])\n",
+    "# df['gt I_yy'] = df['Body'].map(lambda x: gt_inertia.get(body_mapping.get(x, ''), [np.nan]*3)[1])\n",
+    "# df['gt I_zz'] = df['Body'].map(lambda x: gt_inertia.get(body_mapping.get(x, ''), [np.nan]*3)[2])\n",
     "\n",
     "# Display comparison\n",
     "\n",
@@ -105,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
