--- a/motion_imitation/data_process/scraping.ipynb
+++ b/motion_imitation/data_process/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        " 'Subject #1 (climb, swing, hang on playground equipment) file index\\n- - asf\\tframerate\\tFeedback\\nImage\\tTrial #\\tMotion Description\\t\\n1\\tplayground - forward jumps, turn around\\ttvd\\tc3d\\tamc\\tmpg\\tAnimated\\t120\\tF')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,117 +38,117 @@
      "output_type": "stream",
      "text": [
       "Summary Table:\n",
-      "| Subject # | Number of Walking Trials |\n",
+      "| Subject # | Number of Walk forward Trials |\n",
       "|-----------|---------------------------|\n",
-      "| 69        | 72                        |\n",
-      "| 132       | 46                        |\n",
-      "| 36        | 40                        |\n",
-      "| 133       | 28                        |\n",
-      "| 16        | 27                        |\n",
-      "| 136       | 27                        |\n",
-      "| 35        | 24                        |\n",
+      "| 69        | 21                        |\n",
       "| 83        | 16                        |\n",
-      "| 39        | 15                        |\n",
-      "| 86        | 15                        |\n",
-      "| 7         | 13                        |\n",
-      "| 8         | 12                        |\n",
-      "| 143       | 12                        |\n",
-      "| 120       | 11                        |\n",
-      "| 17        | 10                        |\n",
-      "| 113       | 10                        |\n",
-      "| 137       | 10                        |\n",
-      "| 141       | 9                         |\n",
-      "| 77        | 8                         |\n",
       "| 82        | 8                         |\n",
-      "| 131       | 8                         |\n",
-      "| 15        | 7                         |\n",
-      "| 139       | 7                         |\n",
-      "| 20        | 6                         |\n",
-      "| 21        | 6                         |\n",
-      "| 56        | 6                         |\n",
-      "| 81        | 6                         |\n",
-      "| 111       | 6                         |\n",
-      "| 114       | 6                         |\n",
-      "| 3         | 5                         |\n",
-      "| 22        | 5                         |\n",
-      "| 23        | 5                         |\n",
-      "| 38        | 5                         |\n",
       "| 41        | 5                         |\n",
-      "| 90        | 5                         |\n",
-      "| 12        | 4                         |\n",
       "| 40        | 4                         |\n",
-      "| 74        | 4                         |\n",
-      "| 91        | 4                         |\n",
-      "| 18        | 3                         |\n",
-      "| 19        | 3                         |\n",
-      "| 47        | 3                         |\n",
-      "| 54        | 3                         |\n",
-      "| 76        | 3                         |\n",
-      "| 2         | 2                         |\n",
-      "| 32        | 2                         |\n",
-      "| 37        | 2                         |\n",
-      "| 45        | 2                         |\n",
-      "| 46        | 2                         |\n",
-      "| 104       | 2                         |\n",
-      "| 5         | 1                         |\n",
-      "| 6         | 1                         |\n",
+      "| 81        | 4                         |\n",
+      "| 36        | 3                         |\n",
       "| 9         | 1                         |\n",
-      "| 10        | 1                         |\n",
-      "| 26        | 1                         |\n",
-      "| 27        | 1                         |\n",
-      "| 29        | 1                         |\n",
-      "| 43        | 1                         |\n",
-      "| 49        | 1                         |\n",
-      "| 55        | 1                         |\n",
-      "| 78        | 1                         |\n",
-      "| 93        | 1                         |\n",
-      "| 103       | 1                         |\n",
-      "| 107       | 1                         |\n",
-      "| 108       | 1                         |\n",
-      "| 127       | 1                         |\n",
-      "| 138       | 1                         |\n",
-      "| 144       | 1                         |\n",
+      "| 39        | 1                         |\n",
+      "| 47        | 1                         |\n",
       "| 1         | 0                         |\n",
+      "| 2         | 0                         |\n",
+      "| 3         | 0                         |\n",
+      "| 5         | 0                         |\n",
+      "| 6         | 0                         |\n",
+      "| 7         | 0                         |\n",
+      "| 8         | 0                         |\n",
+      "| 10        | 0                         |\n",
       "| 11        | 0                         |\n",
+      "| 12        | 0                         |\n",
       "| 13        | 0                         |\n",
       "| 14        | 0                         |\n",
+      "| 15        | 0                         |\n",
+      "| 16        | 0                         |\n",
+      "| 17        | 0                         |\n",
+      "| 18        | 0                         |\n",
+      "| 19        | 0                         |\n",
+      "| 20        | 0                         |\n",
+      "| 21        | 0                         |\n",
+      "| 22        | 0                         |\n",
+      "| 23        | 0                         |\n",
       "| 24        | 0                         |\n",
       "| 25        | 0                         |\n",
+      "| 26        | 0                         |\n",
+      "| 27        | 0                         |\n",
       "| 28        | 0                         |\n",
+      "| 29        | 0                         |\n",
       "| 30        | 0                         |\n",
       "| 31        | 0                         |\n",
+      "| 32        | 0                         |\n",
       "| 33        | 0                         |\n",
       "| 34        | 0                         |\n",
+      "| 35        | 0                         |\n",
+      "| 37        | 0                         |\n",
+      "| 38        | 0                         |\n",
       "| 42        | 0                         |\n",
+      "| 43        | 0                         |\n",
+      "| 45        | 0                         |\n",
+      "| 46        | 0                         |\n",
+      "| 49        | 0                         |\n",
+      "| 54        | 0                         |\n",
+      "| 55        | 0                         |\n",
+      "| 56        | 0                         |\n",
       "| 60        | 0                         |\n",
       "| 61        | 0                         |\n",
       "| 62        | 0                         |\n",
       "| 63        | 0                         |\n",
       "| 64        | 0                         |\n",
       "| 70        | 0                         |\n",
+      "| 74        | 0                         |\n",
       "| 75        | 0                         |\n",
+      "| 76        | 0                         |\n",
+      "| 77        | 0                         |\n",
+      "| 78        | 0                         |\n",
       "| 79        | 0                         |\n",
       "| 80        | 0                         |\n",
       "| 85        | 0                         |\n",
+      "| 86        | 0                         |\n",
       "| 87        | 0                         |\n",
       "| 88        | 0                         |\n",
       "| 89        | 0                         |\n",
+      "| 90        | 0                         |\n",
+      "| 91        | 0                         |\n",
+      "| 93        | 0                         |\n",
       "| 94        | 0                         |\n",
       "| 102       | 0                         |\n",
+      "| 103       | 0                         |\n",
+      "| 104       | 0                         |\n",
       "| 105       | 0                         |\n",
       "| 106       | 0                         |\n",
+      "| 107       | 0                         |\n",
+      "| 108       | 0                         |\n",
+      "| 111       | 0                         |\n",
+      "| 113       | 0                         |\n",
+      "| 114       | 0                         |\n",
       "| 115       | 0                         |\n",
       "| 118       | 0                         |\n",
+      "| 120       | 0                         |\n",
       "| 122       | 0                         |\n",
       "| 123       | 0                         |\n",
       "| 124       | 0                         |\n",
       "| 125       | 0                         |\n",
       "| 126       | 0                         |\n",
+      "| 127       | 0                         |\n",
       "| 128       | 0                         |\n",
+      "| 131       | 0                         |\n",
+      "| 132       | 0                         |\n",
+      "| 133       | 0                         |\n",
       "| 134       | 0                         |\n",
       "| 135       | 0                         |\n",
+      "| 136       | 0                         |\n",
+      "| 137       | 0                         |\n",
+      "| 138       | 0                         |\n",
+      "| 139       | 0                         |\n",
       "| 140       | 0                         |\n",
-      "| 142       | 0                         |\n"
+      "| 141       | 0                         |\n",
+      "| 142       | 0                         |\n",
+      "| 143       | 0                         |\n",
+      "| 144       | 0                         |\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
     "    if subject_number_match:\n",
     "        subject_number = int(subject_number_match.group(1))\n",
     "        # Count occurrences of \"walk\" or \"walking\" in trial descriptions\n",
-    "        walk_count = len(re.findall(r\"\\bwalk(?:ing)?\\b\", subject, flags=re.IGNORECASE))\n",
+    "        walk_count = len(re.findall(r\"\\bwalk forward\\b\", subject, flags=re.IGNORECASE))\n",
     "        walking_trials[subject_number] += walk_count\n",
     "\n",
     "# Rank subjects by the number of walking trials\n",
@@ -179,7 +179,7 @@
     "\n",
     "# Generate summary table\n",
     "print(\"Summary Table:\")\n",
-    "print(\"| Subject # | Number of Walking Trials |\")\n",
+    "print(\"| Subject # | Number of Walk forward Trials |\")\n",
     "print(\"|-----------|---------------------------|\")\n",
     "for subject, count in ranked_subjects:\n",
     "    print(f\"| {subject:<9} | {count:<25} |\")\n"
