--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -31,6 +31,83 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does output_tensor require gradients? (initial): True\n",
+      "Does detached output_tensor require gradients? False\n",
+      "Does output_tensor_no_grad require gradients? False\n",
+      "Does frozen output_tensor require gradients? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# 1. LSTM Module Definition\n",
+    "class MyLSTM(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_layers):\n",
+    "        super(MyLSTM, self).__init__()\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, dtype = torch.float32)\n",
+    "\n",
+    "    def forward(self, input_tensor):\n",
+    "        # 2. Forward Pass (Standard LSTM)\n",
+    "        output, (hidden, cell) = self.lstm(input_tensor)\n",
+    "        return output, hidden, cell\n",
+    "\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
+    "# 3. Example Usage\n",
+    "if __name__ == '__main__':\n",
+    "    # 3.1 Create LSTM Model\n",
+    "    input_size = 10\n",
+    "    hidden_size = 20\n",
+    "    num_layers = 1\n",
+    "    lstm_model = MyLSTM(input_size, hidden_size, num_layers)\n",
+    "\n",
+    "    # 3.2 Create Input Tensor (requires_grad=True by default)\n",
+    "    seq_length = 5\n",
+    "    batch_size = 3\n",
+    "    input_tensor = torch.randn(seq_length, batch_size, input_size, requires_grad=True)  # Input with gradients\n",
+    "\n",
+    "    # 3.3 Perform Forward Pass\n",
+    "    output_tensor, hidden_state, cell_state = lstm_model(input_tensor)\n",
+    "\n",
+    "    # 3.4 Check if output_tensor requires gradients\n",
+    "    print(\"Does output_tensor require gradients? (initial):\", output_tensor.requires_grad)\n",
+    "\n",
+    "    # 3.5 Example: Detaching the output tensor\n",
+    "    output_tensor_detached = output_tensor.detach()\n",
+    "    print(\"Does detached output_tensor require gradients?\", output_tensor_detached.requires_grad)\n",
+    "\n",
+    "    # 3.6 Example: Setting requires_grad=False on the output tensor\n",
+    "    output_tensor_no_grad = output_tensor.clone().detach().requires_grad_(False)\n",
+    "    print(\"Does output_tensor_no_grad require gradients?\", output_tensor_no_grad.requires_grad)\n",
+    "\n",
+    "    # 3.7 Example: Setting requires_grad=False on LSTM parameters\n",
+    "    for param in lstm_model.parameters():\n",
+    "        param.requires_grad = False\n",
+    "\n",
+    "    output_tensor_frozen, hidden_state_frozen, cell_state_frozen = lstm_model(input_tensor)\n",
+    "    print(\"Does frozen output_tensor require gradients?\", output_tensor_frozen.requires_grad)\n",
+    "\n",
+    "    # 3.8 Example: Setting requires_grad=True back on LSTM parameters (optional)\n",
+    "    for param in lstm_model.parameters():\n",
+    "        param.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "out_name = f'0202_wo_phase_skeleton.mp4'\n",
